--- a/src/App.css
+++ b/src/App.css
@@ -27,8 +27,8 @@ body{
 }
 
 .header input{
-  width: 200px;
-  height: 40px;
+  width: 400px;
+  height: 60px;
   border:none;
   border-bottom-left-radius: 8px;
   border-top-left-radius: 8px;
@@ -39,7 +39,7 @@ body{
 
 .header button{
   width: 70px;
-  height: 87px;
+  height: 62px;
   border:none;
   border-bottom-right-radius: 8px;
   border-top-right-radius: 8px;
@@ -50,4 +50,48 @@ body{
 .todoList{
   flex: 70%;
   width: 100%;
+  display: flex;
+  align-items: center;
+  padding-top: 50px;
+  flex-direction: column;
 }
+
+.task{
+  width: 500px;
+  height: 50px;
+  display: flex;
+  color:black;
+  margin: 15px;
+}
+
+.task .content{
+  flex: 80%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.task .content span{
+  display: grid;
+  place-items: center;
+  border:1px solid white;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  border-right: none;
+  background-color: tomato;
+}
+
+.task button{
+  flex: 20%;
+  height: 100%;
+  border:none;
+  background-color: lightseagreen;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  color:white;
+  cursor: pointer;
+}
+
+
