--- a/src/App.css
+++ b/src/App.css
@@ -14,84 +14,117 @@ body{
 
 .header .inputContainer{
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  gap: .5rem;
+  align-items: center;
+  justify-content: center;
 }
 
 .header{
-  flex: 30%;
-  background-color: tomato;
-  width: 100%;
   display: flex;
-  justify-content: center;
+  width: 100vw;
+  height: 40vh;
+  flex-direction: column;
+  gap: .5rem;
   align-items: center;
+  justify-content: center;
+  background-color: orange;
 }
 
 .header input{
-  width: 400px;
-  height: 60px;
+  width: 25rem;
+  height: 3.5rem;
   border:none;
-  border-bottom-left-radius: 8px;
-  border-top-left-radius: 8px;
-  padding-left: 10px;
+  border-bottom-left-radius: .5rem;
+  border-bottom-right-radius: .5rem;
+  border-top-right-radius: .5rem;
+  border-top-left-radius: .5rem;
   font-size: 17px;
   border:1px solid grey;
 }
 
 .header button{
-  width: 70px;
-  height: 62px;
+  width: 5rem;
+  height: 3.5rem;
   border:none;
-  border-bottom-right-radius: 8px;
-  border-top-right-radius: 8px;
+  border-bottom-left-radius: .5rem;
+  border-bottom-right-radius: .5rem;
+  border-top-right-radius: .5rem;
+  border-top-left-radius: .5rem;
   padding-left: 10px;
   cursor:pointer;
 }
 
+.header label {
+  color: #000000;
+  font-weight: bold;
+  display: block;
+}
+
+select {
+  width: 18rem;
+  padding: 0.8rem;
+  border: 0 ;
+  background-color: lightblue;
+}
+
 .todoList{
-  flex: 70%;
+  flex: 65%;
   width: 100%;
   display: flex;
   align-items: center;
-  padding-top: 50px;
+  padding-top: 1rem;
   flex-direction: column;
+  background-color: rgba(255, 255, 75, 0.59);
+
 }
 
 .task{
-  width: 500px;
-  height: 50px;
   display: flex;
-  color:black;
-  margin: 15px;
-}
-
-.task .content{
-  flex: 80%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
+  flex-direction: row;
   align-items: center;
+  gap: .5rem;
+  justify-content: center;
+  padding: .3rem;
 }
 
-.task .content span{
-  display: grid;
-  place-items: center;
-  border:1px solid white;
-  width: 100%;
-  height: 100%;
-  font-size: 18px;
-  border-right: none;
-  background-color: tomato;
+.task .checkbox{
+  width: 20px;
+  height: 20px;
+  margin: .5rem;
+  border: 1px solid gray;
+  border-radius: 20px;
+  cursor: pointer;
+
 }
+
+.task input{
+    width: 20rem;
+    border: 1px solid grey;
+    padding: .5rem;
+    border-radius: .5rem;
+}
+
 
 .task button{
-  flex: 20%;
-  height: 100%;
-  border:none;
-  background-color: lightseagreen;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
-  color:white;
-  cursor: pointer;
+  background-color: orange;
+  padding: .5rem;
+  border: 1px solid gray;
+  width: 3rem;
+  border-radius: .5rem;
+  color: white;
+  font-weight: bold;
+  cursor: pointer,
+}
+
+@media only screen and (max-width: 500px) {
+  .header .inputContainer {
+    width: 95vw;
+  }
+  .task {
+    width: 95vw;
+  }
+
 }
 
 
